[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "common"
path = "src/lib/common.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
#onomy_test_lib = { path = "./../../onomy_tests/onomy_test_lib" }
onomy_test_lib = { git = "https://github.com/pendulum-labs/onomy_tests", rev = "7b96aad8c73019e8be26efba7971c94092fa2d67" }
serde_json = "1.0"
tokio = { version = "1", default-features = false }
